[tool.poetry]
name = "001-streamlit-redaction-improver"
version = "0.1.0"
description = "Streamlit summarizer using LangChain and ChatOpenAI"
authors = ["julio colomer <info@aiaccelera.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"

streamlit = "^1.37.0"

# LangChain Core
langchain = "^0.2.11"
langchain-openai = "^0.1.19"
langchain-community = "^0.2.10"

# Utilidades recomendadas
tiktoken = "^0.7.0"
pydantic = "^2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
